--- a/packages/gutenberg/package.json
+++ b/packages/gutenberg/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/gutenberg",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "main": "index.js",
   "license": "MIT"
 }
