--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@zionbuilder/webpack-config",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
     "@vue/compiler-sfc": "^3.0.0",
-    "@zionbuilder/css-variables": "file:../css-variables",
+    "@zionbuilder/css-variables": "^1.0.0",
     "css-loader": "^4.3.0",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
