--- a/packages/edit-page/package.json
+++ b/packages/edit-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/edit-page",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "main": "index.js",
   "author": "zionbuilder.io",
   "license": "MIT"
