--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "@zionbuilder/editor",
-	"version": "1.0.2-alpha.0",
+	"version": "1.0.0",
 	"description": "Creates the editor page for Zion Builder",
 	"main": "./src/index",
 	"author": "zionbuilder.io",
 	"license": "MIT",
 	"dependencies": {
-		"@zionbuilder/click-outside-directive": "file:../click-outside-directive",
-		"@zionbuilder/models": "file:../models",
+		"@zionbuilder/click-outside-directive": "1.0.0",
+		"@zionbuilder/models": "^1.0.0",
 		"dom-form-serializer": "^1.0.8",
 		"dom-to-image": "^2.6.0",
 		"file-saver": "^2.0.2",
