--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/elements",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT"
 }
