--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/hooks",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "description": "Hooks methods",
   "main": "./src/index",
   "license": "MIT"
