--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@zionbuilder/modal",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "description": "A vue modal component",
   "main": "./src/index.ts",
   "author": "zionbuilder.io",
-  "license": "MIT",
-  "@zionbuilder/components": "file:../components"
+  "license": "MIT"
 }
