--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@zionbuilder/models",
-	"version": "1.0.2-alpha.0",
+	"version": "1.0.0",
 	"description": "Models Zion Builder",
 	"main": "./src/index",
 	"author": "zionbuilder.io",
 	"license": "MIT",
 	"dependencies": {
-		"@zionbuilder/click-outside-directive": "file:../click-outside-directive",
+		"@zionbuilder/click-outside-directive": "^1.0.0",
 		"dom-form-serializer": "^1.0.8",
 		"dom-to-image": "^2.6.0",
 		"file-saver": "^2.0.2",
