--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/utils",
-  "version": "1.0.2-alpha.0",
+  "version": "1.0.0",
   "description": "Utils functions for Zion Builder",
   "main": "src/index",
   "author": "zionbuilder.io",
