Implemented css classes store

--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,6 @@
 {
 	"packages": [
-		"packages/modal",
-		"packages/click-outside-directive",
-		"packages/components",
-		"packages/hooks",
-		"packages/modal",
-		"packages/sortable",
-		"packages/tooltip",
-		"packages/video"
+		"packages/webpack-config"
 	],
 	"version": "1.0.2-alpha.0",
 	"publishConfig": {
