--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
 	"packages": [
 		"packages/webpack-config"
 	],
-	"version": "1.0.2-alpha.0",
+	"version": "1.0.0",
 	"publishConfig": {
 		"access": "public"
 	}
