--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/webpack-config",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "license": "MIT",
   "dependencies": {
     "@vue/compiler-sfc": "^3.0.0",
@@ -9,14 +9,13 @@
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.4",
+	"ts-loader": "^8.0.4",
+	"typescript": "^4.0.3",
     "vue-loader": "^16.0.0-beta.8",
-    "webpack-merge": "^5.1.4"
+	"webpack-merge": "^5.1.4",
+	"mini-css-extract-plugin": "^0.11.3",
+    "source-map-loader": "^1.1.0"
   },
   "main": "src/index.js",
-  "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a",
-  "devDependencies": {
-    "mini-css-extract-plugin": "^0.11.3",
-    "source-map-loader": "^1.1.0"
-  }
+  "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a"
 }
