--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -2,7 +2,7 @@
 	"name": "@zionbuilder/admin",
 	"version": "1.0.0",
 	"description": "Creates the admin page for Zion Builder",
-	"main": "./src/index.js",
+	"main": "./src/index.ts",
 	"author": "zionbuilder.io",
 	"license": "MIT",
 	"dependencies": {
