--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -6,15 +6,16 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@zionbuilder/css-variables": "^1.0.0",
     "css-loader": "^4.3.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.11.3",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
+    "source-map-loader": "^1.1.0",
     "style-loader": "^1.2.1",
-	"ts-loader": "^8.0.4",
-	"typescript": "^4.0.3",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
     "vue-loader": "^16.0.0-beta.8",
-	"webpack-merge": "^5.1.4",
-	"mini-css-extract-plugin": "^0.11.3",
-    "source-map-loader": "^1.1.0"
+    "webpack-merge": "^5.1.4"
   },
   "main": "src/index.js",
   "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a"
