--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"file-saver": "^2.0.2",
 		"vue": "^3.0.0",
-		"vue-router": "^4.0.0-beta.11"
+		"vue-router": "^4.0.0-beta.11",
+		"@zionbuilder/composables": "^1.0.0"
 	}
 }
