--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Setup Node.js environment
-        uses: actions/setup-node@v1.4.2
+        uses: actions/setup-node@v1.4.4
         with:
             node-version: '12'
       - name: Setup PHP
@@ -60,5 +60,5 @@ jobs:
             phpcs_bin_path: './vendor/bin/phpcs'
       - name: PHPStan check
         run: vendor/bin/phpstan analyze --level=5
-      - name: Lint Vue templates
-        run: yarn run lint
+      # - name: Lint Vue templates
+      #   run: yarn run lint
