--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -12,8 +12,7 @@
 		"file-saver": "^2.0.2",
 		"localstorage-ttl": "1.0.2",
 		"vue": "^3.0.0",
-		"vue-router": "^4.0.0-beta.11",
-		"vuex": "^4.0.0-beta.4"
+		"vue-router": "^4.0.0-beta.11"
 	},
 	"private": false
 }
