--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -1,11 +1,11 @@
-# This is a basic workflow to help you get started with Actions
-
-name: TEST and Build
+name: Build nightly
 
 on:
-  push:
+  pull_request_target:
     branches:
-      - develop
+      - automatically-create-nighly-releases
+    types:
+      - closed
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -13,6 +13,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged_by != ''
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
