--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           upload_url: https://uploads.github.com/repos/zionbuilder/zionbuilder/releases/35053891/assets{?name,label} # find out this value by opening https://api.github.com/repos/<owner>/<repo>/releases in your browser and copy the full "upload_url" value including the {?name,label} part
           release_id: 35053891 # same as above (id can just be taken out the upload_url, it's used to find old releases)
-          asset_path: ./zionbuilder.zip # path to archive to upload
+          asset_path: ./zion-builder.zip # path to archive to upload
           asset_name: zionbuilder-nightly-$$.zip # name to upload the release as, use $$ to insert date (YYYYMMDD) and 6 letter commit hash
           asset_content_type: application/zip # required by GitHub API
           max_releases: 7 # optional, if there are more releases than this matching the asset_name, the oldest ones are going to be deleted
