--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
 	"packages": [
-		"packages/webpack-config"
+		"packages/webpack-config",
+		"packages/service"
 	],
 	"version": "1.1.1",
 	"publishConfig": {
