--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -13,7 +13,7 @@
     "dev": "webpack --watch"
   },
   "dependencies": {
-    "vue": "^3.0.0"
+    "vue": "3.0.3"
   },
   "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a"
 }
