--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,6 @@
     "name": "zionbuilder/zionbuilder",
     "type": "wordpress-plugin",
     "description": "A visual builder for WordPress",
-    "autoload": {
-        "psr-4": {"ZionBuilder\\": "includes/"}
-    },
-    "require-dev": {
-        "wp-coding-standards/wpcs": "^2.3.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "squizlabs/php_codesniffer": "^3.5.8",
-        "phpstan/phpstan": "^0.12.64",
-        "szepeviktor/phpstan-wordpress": "^0.7.1"
-    },
     "license": "GPL-3.0-or-later",
     "authors": [
         {
@@ -20,7 +10,20 @@
         }
     ],
     "require": {
-        "woocommerce/action-scheduler": "^3.1",
-        "enshrined/svg-sanitize": "^0.13.3"
+        "enshrined/svg-sanitize": "^0.13.3",
+        "woocommerce/action-scheduler": "^3.1"
+    },
+    "require-dev": {
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+        "ergebnis/composer-normalize": "^2.11",
+        "phpstan/phpstan": "^0.12.64",
+        "squizlabs/php_codesniffer": "^3.5.8",
+        "szepeviktor/phpstan-wordpress": "^0.7.1",
+        "wp-coding-standards/wpcs": "^2.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "ZionBuilder\\": "includes/"
+        }
     }
 }
