--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"publish:packages": "lerna publish",
 		"publish": "yarn run publish:packages",
 		"dev:packages": "lerna run dev",
-		"dev": "webpack --watch --mode=development",
+		"dev": "zionbuilder-service serve",
 		"build:packages": "lerna run build",
 		"build:types": "tsc --build"
 	},
@@ -28,7 +28,7 @@
 		"lerna": "^3.22.1",
 		"ts-loader": "^8.0.6",
 		"typescript": "^4.0.3",
-		"webpack": "^5.14.0",
+		"webpack": "^5.0.0",
 		"webpack-cli": "^4.3.1"
 	},
 	"workspaces": [
