--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -34,7 +34,7 @@
 		"webpack-dev-server": "^4.0.0-beta.0",
 		"webpack-hot-middleware": "^2.25.0",
 		"webpack-merge": "^5.7.3",
-		"webpack-plugin-serve": "^1.3.0",
+		"webpack-plugin-serve": "zauan/webpack-plugin-serve#zion-builder-version",
 		"wp-pot": "^1.9.3"
 	},
 	"publishConfig": {
