--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -12,28 +12,16 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.10.2",
-		"@intervolga/optimize-cssnano-plugin": "^1.0.6",
 		"@soda/friendly-errors-webpack-plugin": "^1.7.1",
 		"@zionbuilder/babel-preset-zionbuilder": "^1.0.2",
 		"autoprefixer": "^10.2.1",
 		"bestzip": "^2.1.5",
-		"bundle-stats": "^2.2.0",
-		"bundle-stats-webpack-plugin": "^2.2.0",
-		"case-sensitive-paths-webpack-plugin": "^2.3.0",
 		"chalk": "^4.0.0",
-		"css-loader": "^5.0.1",
-		"cssnano": "^4.1.10",
 		"execa": "^5.0.0",
-		"fibers": "^5.0.0",
 		"get-port": "^5.1.1",
-		"hash-sum": "^2.0.0",
 		"minimist": ">=1.2.2",
+		"read-pkg": "^5.2.0",
 		"webpack": "^5.14.0",
-		"webpack-chain": "^6.4.0",
-		"webpack-dev-middleware": "^4.0.4",
-		"webpack-dev-server": "^4.0.0-beta.0",
-		"webpack-hot-middleware": "^2.25.0",
-		"webpack-merge": "^5.7.3",
 		"webpack-plugin-serve": "zauan/webpack-plugin-serve#zion-builder-version",
 		"wp-pot": "^1.9.3"
 	},
