--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
 		"@zionbuilder/service": "^1.0.0",
 		"lerna": "^3.22.1",
 		"ts-loader": "^8.0.6",
-		"typescript": "^4.0.3",
-		"webpack": "^5.0.0",
-		"webpack-cli": "^4.3.1"
+		"typescript": "^4.0.3"
 	},
 	"workspaces": [
 		"packages/*"
