--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -18,6 +18,7 @@
 		"bestzip": "^2.1.5",
 		"chalk": "^4.0.0",
 		"execa": "^5.0.0",
+		"fs-extra": "^9.1.0",
 		"get-port": "^5.1.1",
 		"minimist": ">=1.2.2",
 		"read-pkg": "^5.2.0",
