Feature/repeater elements (#358)
* Fixed theme builder scripts not loading properly in edit mode

* Fixed styles not loading in editor mode

* Added repeater logic

* Various tweaks

- added additional filters and actions to vue Element
- Broke Element component into a wrapper so we can modify the rendering component from filters
- Allow actions/triggers to have unlimited number of arguments

* Added inline styling

* Code cleanup

* Enabled HMR

* Replaced webpack plugin serve with working version

We need to remove this once the webpack plugin serve accepts the provided pull requests containing fixes

* v1.1.4

* Code cleanup

* v1.1.5

* Styled input select multiple

* Input select various fixes

* Added value set dependency type

* Added ability to perform server request for input select options

* Code cleanup

* Fixed element options not triggering loading

* Implemented repeater consumer options

* Added styling based on css class for repeater items

* Updated packages and prepared release candidate

* v1.1.6

* Fixed repeater element css generation

* Styled all repeater items based on css class

* Fixed php stan errors

--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zionbuilder/service",
-	"version": "1.1.3",
+	"version": "1.1.6",
 	"description": "Helper utility for developing for zion builder",
 	"homepage": "",
 	"main": "index.js",
@@ -12,50 +12,18 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.10.2",
-		"@intervolga/optimize-cssnano-plugin": "^1.0.6",
 		"@soda/friendly-errors-webpack-plugin": "^1.7.1",
-		"@vue/component-compiler-utils": "^3.1.2",
 		"@zionbuilder/babel-preset-zionbuilder": "^1.0.2",
 		"autoprefixer": "^10.2.1",
-		"babel-loader": "^8.1.0",
 		"bestzip": "^2.1.5",
-		"bundle-stats": "^2.2.0",
-		"bundle-stats-webpack-plugin": "^2.2.0",
-		"cache-loader": "^4.1.0",
-		"case-sensitive-paths-webpack-plugin": "^2.3.0",
 		"chalk": "^4.0.0",
-		"clean-webpack-plugin": "^3.0.0",
-		"css-loader": "^5.0.1",
-		"cssnano": "^4.1.10",
 		"execa": "^5.0.0",
-		"fibers": "^5.0.0",
-		"file-loader": "^6.0.0",
+		"fs-extra": "^9.1.0",
 		"get-port": "^5.1.1",
-		"hash-sum": "^2.0.0",
-		"less-loader": "^7.2.1",
-		"mini-css-extract-plugin": "^1.3.4",
 		"minimist": ">=1.2.2",
-		"node-sass": "^5.0.0",
-		"pnp-webpack-plugin": "^1.6.4",
-		"postcss-loader": "^4.1.0",
-		"postcss-scss": "^3.0.4",
 		"read-pkg": "^5.2.0",
-		"sass": "^1.26.8",
-		"sass-loader": "^10.1.1",
-		"style-loader": "^2.0.0",
-		"stylus": "^0.54.7",
-		"stylus-loader": "^4.3.2",
-		"terser-webpack-plugin": "^5.1.1",
-		"thread-loader": "^3.0.1",
-		"url-loader": "^4.1.0",
-		"vue-loader": "^15.9.2",
-		"vue-style-loader": "^4.1.2",
 		"webpack": "^5.14.0",
-		"webpack-chain": "^6.4.0",
-		"webpack-dev-middleware": "^4.0.4",
-		"webpack-dev-server": "^3.10.3",
-		"webpack-hot-middleware": "^2.25.0",
-		"webpack-merge": "^5.7.3",
+		"webpack-plugin-serve": "zauan/webpack-plugin-serve#zion-builder-version",
 		"wp-pot": "^1.9.3"
 	},
 	"publishConfig": {
