--- a/packages/webpack-config/package.json
+++ b/packages/webpack-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionbuilder/webpack-config",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "license": "MIT",
   "dependencies": {
     "@vue/compiler-sfc": "^3.0.0",
@@ -13,7 +13,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
-    "vue-loader": "^16.0.0-beta.8",
+    "vue-loader": "^16.1.2",
     "webpack-merge": "^5.1.4"
   },
   "main": "src/index.js",
