--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -23,8 +23,11 @@
 		"minimist": ">=1.2.2",
 		"read-pkg": "^5.2.0",
 		"webpack": "^5.14.0",
-		"webpack-plugin-serve": "zauan/webpack-plugin-serve#zion-builder-version",
+		"webpack-plugin-serve": "^1.4.1",
 		"wp-pot": "^1.9.3"
+	},
+	"devDependencies": {
+		"webpack-bundle-analyzer": "^4.3.0"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -34,8 +37,5 @@
 	"bugs": {
 		"url": "https://github.com/zionbuilder/zionbuilder-cli/issues"
 	},
-	"gitHead": "692654c41f45623e695dc3f1f96bd23dadbb9c2d",
-	"devDependencies": {
-		"webpack-bundle-analyzer": "^4.3.0"
-	}
+	"gitHead": "692654c41f45623e695dc3f1f96bd23dadbb9c2d"
 }
