--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zionbuilder/service",
-	"version": "1.1.6",
+	"version": "2.2.1",
 	"description": "Helper utility for developing for zion builder",
 	"homepage": "",
 	"main": "index.js",
@@ -23,8 +23,11 @@
 		"minimist": ">=1.2.2",
 		"read-pkg": "^5.2.0",
 		"webpack": "^5.14.0",
-		"webpack-plugin-serve": "zauan/webpack-plugin-serve#zion-builder-version",
+		"webpack-plugin-serve": "^1.4.1",
 		"wp-pot": "^1.9.3"
+	},
+	"devDependencies": {
+		"webpack-bundle-analyzer": "^4.3.0"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -34,8 +37,5 @@
 	"bugs": {
 		"url": "https://github.com/zionbuilder/zionbuilder-cli/issues"
 	},
-	"gitHead": "692654c41f45623e695dc3f1f96bd23dadbb9c2d",
-	"devDependencies": {
-		"webpack-bundle-analyzer": "^4.3.0"
-	}
+	"gitHead": "e6c16a16257ad8f99e957aba9cab2759a996ac73"
 }
