--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches:
       - develop
+      - master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
