--- a/packages/css-variables/package.json
+++ b/packages/css-variables/package.json
@@ -2,7 +2,7 @@
   "name": "@zionbuilder/css-variables",
   "version": "1.0.0",
   "description": "Css variables used for Zion Builder",
-  "main": "./src/variables.scss",
+  "main": "./index.scss",
   "author": "zionbuilder.io",
   "license": "MIT",
   "gitHead": "bf0b9f54e954465cd9f07aedf7bbba006d03ff4a"
