--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,7 @@ includes:
 parameters:
     level: max
     inferPrivatePropertyTypeFromConstructor: true
+    checkMissingIterableValueType: false
     bootstrapFiles:
         - tests/phpstan/bootstrap.php
     paths:
