--- a/packages/screenshot/package.json
+++ b/packages/screenshot/package.json
@@ -6,7 +6,8 @@
 	"author": "zionbuilder.io",
 	"license": "MIT",
 	"dependencies": {
-		"dom-to-image": "^2.6.0"
+		"dom-to-image": "^2.6.0",
+		"html-to-image": "^1.9.0"
 	},
 	"private": false
 }
