Fixed local google fonts not loading ttf font corectly

--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"appName":"zionbuilder","outputDir":"dist","debug":true,"mode":"development","devServer":"http://localhost:54658/"}
+{"appName":"zionbuilder","outputDir":"dist"}
