--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -5,8 +5,7 @@
   "author": "zionbuilder.io",
   "license": "MIT",
   "dependencies": {
-    "@types/fitvids": "^2.1.0",
     "@zionbuilder/hooks": "^1.0.0",
-    "fitvids": "^2.1.1"
+    "reframe.js": "^2.2.8"
   }
 }
