Fixed php stan errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,12 +53,14 @@
 	"editor.formatOnSave": true,
 	"cSpell.words": [
 		"ABSPATH",
+		"barebone",
 		"composables",
 		"DELETABLE",
 		"Iframe",
 		"opentype",
 		"phpcs",
 		"Schd",
+		"Shortcode",
 		"tmce",
 		"trailingslashit",
 		"zionbuilder",
