--- a/package.json
+++ b/package.json
@@ -23,10 +23,18 @@
 	},
 	"devDependencies": {
 		"@types/lodash-es": "^4.17.3",
+		"@types/node": "^17.0.21",
 		"@types/webpack": "^4.41.22",
+		"@vue/eslint-config-prettier": "^7.0.0",
+		"@vue/eslint-config-typescript": "^10.0.0",
+		"@vue/tsconfig": "^0.1.3",
+		"eslint": "^8.11.0",
+		"eslint-plugin-vue": "^8.5.0",
 		"lerna": "^3.22.1",
+		"prettier": "^2.6.0",
 		"ts-loader": "^8.0.6",
-		"typescript": "^4.0.3"
+		"typescript": "^4.0.3",
+		"vue-tsc": "^0.33.2-patch.1"
 	},
 	"workspaces": [
 		"packages/*"
