Refactored color picker

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -14,5 +14,9 @@
 		"@zionbuilder/video": "^1.0.0",
 		"raf-schd": "^4.0.2",
 		"tinycolor2": "^1.4.1"
+	},
+	"devDependencies": {
+		"@types/raf-schd": "^4.0.1",
+		"@types/tinycolor2": "^1.4.3"
 	}
 }
