Refactored InlineEdit and Injection

--- a/packages/tsconfig/tsconfig.json
+++ b/packages/tsconfig/tsconfig.json
@@ -21,7 +21,7 @@
 		// Import non-ES modules as default imports.
 		"esModuleInterop": true,
 		"jsx": "react",
-		"baseUrl": ".",
+		// "baseUrl": ".",
 		"outDir": "dist",
 		"lib": [
 			"es2018",
