--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -4,6 +4,7 @@
 		"rootDir": "./src",
 		"declarationDir": "./build-types",
 		"paths": {
+			"@composables/*": ["./src/composables/*"],
 			"@zb/*": ["../*"]
 		},
 	},
