--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,6 +16,7 @@
 		"tinycolor2": "^1.4.1"
 	},
 	"devDependencies": {
+		"@types/codemirror": "^5.60.5",
 		"@types/raf-schd": "^4.0.1",
 		"@types/tinycolor2": "^1.4.3"
 	}
