--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -4,7 +4,7 @@
 		"rootDir": "./src",
 		"declarationDir": "./build-types",
 		"paths": {
-			"@composables/*": ["./src/composables/*"],
+			"@composables": ["./src/composables"],
 			"@zb/*": ["../*"]
 		},
 	},
@@ -14,6 +14,7 @@
 	"include": [
 		"src/**/*",
 		"../shims-vue.d.ts",
+		"../global.d.ts",
 		"./global.d.ts"
 	]
 }
