--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"appName":"zionbuilder","outputDir":"dist","debug":true,"mode":"development","devServer":"http://localhost:32793/"}
+{"appName":"zionbuilder","outputDir":"dist"}
