--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,25 @@
         }
     ],
     "require": {
-        "woocommerce/action-scheduler": "^3.1"
+        "woocommerce/action-scheduler": "^v3.1.5"
     },
     "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "ergebnis/composer-normalize": "^2.11",
-        "phpstan/phpstan": "^0.12.64",
+        "dealerdirect/phpcodesniffer-composer-installer": "^v0.7.2",
+        "ergebnis/composer-normalize": "^2.9.1",
+        "phpstan/phpstan": "^1.5.4",
         "squizlabs/php_codesniffer": "^3.5.8",
-        "szepeviktor/phpstan-wordpress": "^0.7.1",
+        "szepeviktor/phpstan-wordpress": "v1.0.5",
         "wp-coding-standards/wpcs": "^2.3.0"
     },
     "autoload": {
         "psr-4": {
             "ZionBuilder\\": "includes/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
