Added @zb alias to tsconfig.base

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,8 @@
 	"extends": "@zionbuilder/tsconfig/tsconfig.json",
 	"compilerOptions": {
 		"paths": {
-			"@zionbuilder/*": ["./packages/*"]
+			"@zionbuilder/*": ["./packages/*"],
+			"@zb/*": ["./packages/*"]
 		},
 	},
 	"exclude": [
