--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
 	"private": true,
 	"scripts": {
 		"translate": "zionbuilder-service translate",
-		"build": "zionbuilder-service build",
+		"dev": "vite",
+		"build": "vue-tsc --noEmit && vite build",
 		"zip": "zionbuilder-service zip",
 		"publish:packages": "lerna publish",
 		"publish": "yarn run publish:packages",
 		"dev:packages": "lerna run dev",
-		"dev": "zionbuilder-service serve",
 		"build:packages": "lerna run build",
 		"build:types": "tsc --build"
 	},
@@ -25,6 +25,7 @@
 		"@types/lodash-es": "^4.17.6",
 		"@types/node": "^17.0.24",
 		"@types/webpack": "^5.28.0",
+		"@vitejs/plugin-vue": "^2.3.3",
 		"@vue/eslint-config-prettier": "^7.0.0",
 		"@vue/eslint-config-typescript": "^10.0.0",
 		"@vue/tsconfig": "^0.1.3",
@@ -32,9 +33,11 @@
 		"eslint-plugin-vue": "^8.6.0",
 		"lerna": "^4.0.0",
 		"prettier": "^2.6.2",
+		"sass": "^1.51.0",
 		"ts-loader": "^9.2.8",
-		"typescript": "^4.6.3",
-		"vue-tsc": "^0.34.7"
+		"typescript": "^4.6.4",
+		"vite": "^2.9.9",
+		"vue-tsc": "^0.34.13"
 	},
 	"workspaces": [
 		"packages/*"
