--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@popperjs/core": "^2.11.5",
 		"axios": "^0.27.2",
 		"crypto-js": "^4.1.1",
+		"express": "^4.18.1",
 		"file-saver": "^2.0.5",
 		"localstorage-ttl": "^1.0.2",
 		"lodash-es": "^4.17.21",
@@ -43,10 +44,13 @@
 		"@vue/eslint-config-prettier": "^7.0.0",
 		"@vue/eslint-config-typescript": "^10.0.0",
 		"@vue/tsconfig": "^0.1.3",
+		"esbuild": "^0.14.39",
 		"eslint": "^8.13.0",
 		"eslint-plugin-vue": "^8.6.0",
 		"lerna": "^4.0.0",
 		"prettier": "^2.6.2",
+		"rollup-plugin-esbuild": "^4.9.1",
+		"rollup-plugin-terser": "^7.0.2",
 		"sass": "^1.51.0",
 		"ts-loader": "^9.2.8",
 		"typescript": "^4.6.4",
