Updated version and changelog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
 		"autosave",
 		"barebone",
 		"composables",
+		"customizer",
 		"dashicons",
 		"DELETABLE",
 		"Iframe",
@@ -70,6 +71,7 @@
 		"Schd",
 		"Shortcode",
 		"showinfo",
+		"Swiper",
 		"tmce",
 		"trailingslashit",
 		"treeview",
