--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
 	"version": "2.4.1",
 	"private": true,
 	"scripts": {
-		"translate": "zionbuilder-service translate",
+		"translate": "node ./bin/translate.mjs",
 		"dev": "node ./bin/dev.mjs",
 		"build": "node ./bin/build.mjs",
-		"build:old": "zionbuilder-service build",
-		"zip": "zionbuilder-service zip",
+		"zip": "node ./bin/build.mjs && node ./bin/translate.mjs && composer dump-autoload --no-dev --optimize && node ./bin/zip.mjs",
 		"publish:packages": "lerna publish",
 		"publish": "yarn run publish:packages",
 		"dev:packages": "lerna run dev",
@@ -49,6 +48,7 @@
 		"@vue/eslint-config-prettier": "^7.0.0",
 		"@vue/eslint-config-typescript": "^10.0.0",
 		"@vue/tsconfig": "^0.1.3",
+		"bestzip": "^2.2.1",
 		"esbuild": "^0.14.39",
 		"eslint": "^8.13.0",
 		"eslint-plugin-vue": "^8.6.0",
@@ -61,6 +61,7 @@
 		"typescript": "^4.6.4",
 		"vite": "^2.9.9",
 		"vite-plugin-externals": "^0.5.0",
-		"vue-tsc": "^0.34.13"
+		"vue-tsc": "^0.34.13",
+		"wp-pot": "^1.10.2"
 	}
 }
