--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "type": "wordpress-plugin",
     "description": "A visual builder for WordPress",
     "license": "GPL-3.0-or-later",
+	"minimum-stability": "dev",
+	"prefer-stable": true,
     "authors": [
         {
             "name": "zionbuilder",
@@ -18,7 +20,7 @@
         "phpstan/phpstan": "^1.5.4",
         "squizlabs/php_codesniffer": "^3.5.8",
         "szepeviktor/phpstan-wordpress": "v1.0.5",
-        "wp-coding-standards/wpcs": "^2.3.0"
+        "wp-coding-standards/wpcs": "dev-develop as 3.0.0"
     },
     "autoload": {
         "psr-4": {
