--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,18 +57,23 @@
 		"autoload",
 		"autosave",
 		"barebone",
+		"bloginfo",
 		"composables",
 		"customizer",
 		"dashicons",
 		"DELETABLE",
 		"Iframe",
+		"kses",
 		"modestbranding",
+		"multisite",
 		"noindex",
 		"opentype",
 		"pagebuilder",
 		"pagenow",
 		"phpcs",
+		"phpstan",
 		"Pinia",
+		"postmeta",
 		"Schd",
 		"Shortcode",
 		"showinfo",
@@ -82,6 +87,8 @@
 		"Whitelabel",
 		"Wireframe",
 		"wmode",
+		"woocommerce",
+		"wpdb",
 		"youtu",
 		"zionbuilder",
 		"znpb"
@@ -89,7 +96,9 @@
 	"phpcs.enable": true,
 	"cSpell.ignoreWords": [
 		"domtoimage",
+		"innodb",
 		"playsinline",
+		"postid",
 		"wpautop",
 		"wptexturize"
 	],
