--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,7 @@
 includes:
     - vendor/szepeviktor/phpstan-wordpress/extension.neon
 parameters:
-    level: max
+    level: 5
     inferPrivatePropertyTypeFromConstructor: true
     checkMissingIterableValueType: false
     bootstrapFiles:
