--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@vueuse/core": "^9.4.0",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "dom-form-serializer": "^2.0.0",
