--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "@vueuse/core": "^9.4.0",
+    "@wordpress/i18n": "^4.23.0",
     "axios": "^1.2.1",
     "crypto-js": "^4.1.1",
     "dom-form-serializer": "^2.0.0",
