--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
 		"/@/*": ["./src/*"],
 		"@zb/hooks": ["./src/common/modules/hooks"],
 		"@zb/i18n": ["./src/common/modules/i18n"],
-		"@zb/common": ["./src/common"]
+		"@zb/common": ["./src/common"],
+		"@zb/store": ["./src/common/store"]
 	  }
 	},
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
