--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,111 +1,111 @@
-{
-	"files.eol": "\n",
-	"editor.insertSpaces": false,
-	"editor.snippetSuggestions": "top",
-	"editor.detectIndentation": false,
-	"editor.renderWhitespace": "all",
-	"javascript.format.insertSpaceBeforeFunctionParenthesis": true,
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		"vue"
-	],
-	"search.exclude": {
-		"**/node_modules": true,
-		"**/bower_components": true,
-		"**/vendor": true,
-		"**/dist": true,
-		"**/.cache": true,
-		"**/*.map": true,
-	},
-	"search.useIgnoreFiles": false,
-	"scss.lint.duplicateProperties": "error",
-	"files.trimTrailingWhitespace": true,
-	"vueStyle.formatOnSave": true,
-	"vueStyle.preset": {
-		"remove-empty-rulesets": true,
-		"always-semicolon": true,
-		"color-case": "lower",
-		"block-indent": "\t",
-		"color-shorthand": true,
-		"element-case": "lower",
-		"eof-newline": true,
-		"leading-zero": false,
-		"quotes": "double",
-		"sort-order-fallback": "abc",
-		"space-before-colon": "",
-		"space-after-colon": " ",
-		"space-before-combinator": " ",
-		"space-after-combinator": " ",
-		"space-between-declarations": "\n",
-		"space-before-opening-brace": " ",
-		"space-after-opening-brace": "\n",
-		"space-after-selector-delimiter": " ",
-		"space-before-selector-delimiter": "",
-		"space-before-closing-brace": "\n",
-		"strip-spaces": true,
-		"unitless-zero": true,
-		"vendor-prefix-align": true
-	},
-	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": true
-	},
-	"editor.formatOnSave": true,
-	"cSpell.words": [
-		"absint",
-		"ABSPATH",
-		"animatejs",
-		"autoload",
-		"autosave",
-		"barebone",
-		"bloginfo",
-		"composables",
-		"customizer",
-		"dashicons",
-		"DELETABLE",
-		"Guttenberg",
-		"Iframe",
-		"kses",
-		"modestbranding",
-		"multisite",
-		"noindex",
-		"opentype",
-		"pagebuilder",
-		"pagenow",
-		"phpcs",
-		"phpstan",
-		"Pinia",
-		"polylang",
-		"postmeta",
-		"Schd",
-		"Shortcode",
-		"showinfo",
-		"Swiper",
-		"tinycolor",
-		"tmce",
-		"trailingslashit",
-		"treeview",
-		"treview",
-		"typekit",
-		"vuebdnd",
-		"Whitelabel",
-		"Wireframe",
-		"wmode",
-		"woocommerce",
-		"wpdb",
-		"Yoast",
-		"youtu",
-		"zionbuilder",
-		"zionbuilderpro",
-		"znpb"
-	],
-	"phpcs.enable": true,
-	"cSpell.ignoreWords": [
-		"domtoimage",
-		"innodb",
-		"playsinline",
-		"postid",
-		"wpautop",
-		"wptexturize"
-	],
-}
+// {
+// 	"files.eol": "\n",
+// 	"editor.insertSpaces": false,
+// 	"editor.snippetSuggestions": "top",
+// 	"editor.detectIndentation": false,
+// 	"editor.renderWhitespace": "all",
+// 	"javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+// 	"eslint.validate": [
+// 		"javascript",
+// 		"javascriptreact",
+// 		"vue"
+// 	],
+// 	"search.exclude": {
+// 		"**/node_modules": true,
+// 		"**/bower_components": true,
+// 		"**/vendor": true,
+// 		"**/dist": true,
+// 		"**/.cache": true,
+// 		"**/*.map": true,
+// 	},
+// 	"search.useIgnoreFiles": false,
+// 	"scss.lint.duplicateProperties": "error",
+// 	"files.trimTrailingWhitespace": true,
+// 	"vueStyle.formatOnSave": true,
+// 	"vueStyle.preset": {
+// 		"remove-empty-rulesets": true,
+// 		"always-semicolon": true,
+// 		"color-case": "lower",
+// 		"block-indent": "\t",
+// 		"color-shorthand": true,
+// 		"element-case": "lower",
+// 		"eof-newline": true,
+// 		"leading-zero": false,
+// 		"quotes": "double",
+// 		"sort-order-fallback": "abc",
+// 		"space-before-colon": "",
+// 		"space-after-colon": " ",
+// 		"space-before-combinator": " ",
+// 		"space-after-combinator": " ",
+// 		"space-between-declarations": "\n",
+// 		"space-before-opening-brace": " ",
+// 		"space-after-opening-brace": "\n",
+// 		"space-after-selector-delimiter": " ",
+// 		"space-before-selector-delimiter": "",
+// 		"space-before-closing-brace": "\n",
+// 		"strip-spaces": true,
+// 		"unitless-zero": true,
+// 		"vendor-prefix-align": true
+// 	},
+// 	"editor.codeActionsOnSave": {
+// 		"source.fixAll.eslint": true
+// 	},
+// 	"editor.formatOnSave": true,
+// 	"cSpell.words": [
+// 		"absint",
+// 		"ABSPATH",
+// 		"animatejs",
+// 		"autoload",
+// 		"autosave",
+// 		"barebone",
+// 		"bloginfo",
+// 		"composables",
+// 		"customizer",
+// 		"dashicons",
+// 		"DELETABLE",
+// 		"Guttenberg",
+// 		"Iframe",
+// 		"kses",
+// 		"modestbranding",
+// 		"multisite",
+// 		"noindex",
+// 		"opentype",
+// 		"pagebuilder",
+// 		"pagenow",
+// 		"phpcs",
+// 		"phpstan",
+// 		"Pinia",
+// 		"polylang",
+// 		"postmeta",
+// 		"Schd",
+// 		"Shortcode",
+// 		"showinfo",
+// 		"Swiper",
+// 		"tinycolor",
+// 		"tmce",
+// 		"trailingslashit",
+// 		"treeview",
+// 		"treview",
+// 		"typekit",
+// 		"vuebdnd",
+// 		"Whitelabel",
+// 		"Wireframe",
+// 		"wmode",
+// 		"woocommerce",
+// 		"wpdb",
+// 		"Yoast",
+// 		"youtu",
+// 		"zionbuilder",
+// 		"zionbuilderpro",
+// 		"znpb"
+// 	],
+// 	"phpcs.enable": true,
+// 	"cSpell.ignoreWords": [
+// 		"domtoimage",
+// 		"innodb",
+// 		"playsinline",
+// 		"postid",
+// 		"wpautop",
+// 		"wptexturize"
+// 	],
+// }
