--- a/package.json
+++ b/package.json
@@ -8,65 +8,55 @@
   "version": "2.4.1",
   "private": true,
   "scripts": {
-    "translate": "node ./bin/translate.mjs",
+    "translate": "composer run-script makepot",
     "dev": "node ./bin/dev.mjs",
     "build": "node ./bin/build.mjs",
     "zip": "node ./bin/build.mjs && node ./bin/translate.mjs && composer dump-autoload --no-dev --optimize && node ./bin/zip.mjs",
-    "publish:packages": "lerna publish",
     "publish": "yarn run publish:packages",
-    "dev:packages": "lerna run dev",
-    "build:packages": "lerna run build",
     "build:types": "tsc --build",
     "postinstall": "composer install",
     "lint": "tsc --noEmit && eslint"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "@vueuse/core": "^9.4.0",
-    "@wordpress/i18n": "^4.23.0",
-    "axios": "^1.2.1",
+    "@popperjs/core": "^2.11.6",
+    "@vueuse/core": "^9.11.1",
+    "@wordpress/i18n": "^4.25.0",
+    "axios": "^1.2.3",
     "crypto-js": "^4.1.1",
     "dom-form-serializer": "^2.0.0",
-    "dom-to-image": "^2.6.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "file-saver": "^2.0.5",
-    "html-to-image": "^1.9.0",
+    "html-to-image": "^1.11.4",
     "localstorage-ttl": "^1.0.2",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
-    "pinia": "^2.0.14",
+    "pinia": "^2.0.29",
     "raf-schd": "^4.0.3",
-    "reframe.js": "^4.0.0",
-    "rollup-plugin-external-globals": "^0.7.1",
-    "rollup-plugin-iife": "^0.7.0",
-    "tinycolor2": "^1.4.2",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.15"
+    "reframe.js": "^4.0.1",
+    "tinycolor2": "^1.5.2",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18.11.15",
+    "@types/node": "^18.11.18",
     "@types/raf-schd": "^4.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "bestzip": "^2.2.1",
-    "esbuild": "^0.16.7",
-    "eslint": "^8.13.0",
-    "eslint-plugin-vue": "^9.8.0",
-    "lerna": "^6.1.0",
-    "prettier": "^2.6.2",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.8.3",
-    "sass": "^1.51.0",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.4",
-    "vite": "^4.0.1",
-    "vite-plugin-externals": "^0.5.0",
-    "vue-tsc": "^1.0.13",
-    "wp-pot": "^1.10.2",
-    "eslint-config-custom": "workspace:*"
+    "esbuild": "^0.17.3",
+    "eslint": "^8.32.0",
+    "eslint-config-custom": "workspace:*",
+    "eslint-plugin-vue": "^9.9.0",
+    "prettier": "^2.8.3",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.57.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vite-plugin-externals": "^0.5.1",
+    "vue-tsc": "^1.0.24",
+    "wp-pot": "^1.10.2"
   }
 }
