--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,12 @@
     "woocommerce/action-scheduler": "^v3.1.5"
   },
   "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "^v0.7.2",
-    "ergebnis/composer-normalize": "^2.9.1",
-    "phpstan/phpstan": "^1.5.4",
-    "squizlabs/php_codesniffer": "^3.5.8",
-    "szepeviktor/phpstan-wordpress": "v1.0.5",
-    "wp-coding-standards/wpcs": "dev-develop as 3.0.0",
-    "wp-cli/wp-cli-bundle": "*"
+    "dealerdirect/phpcodesniffer-composer-installer": "v1.0.0",
+    "phpstan/phpstan": "^1.9.14",
+    "squizlabs/php_codesniffer": "^3.7.1",
+    "szepeviktor/phpstan-wordpress": "v1.1.6",
+    "wp-coding-standards/wpcs": "2.3.0",
+    "wp-cli/i18n-command": "^v2.4.1"
   },
   "autoload": {
     "psr-4": {
@@ -36,7 +35,7 @@
   },
   "scripts": {
     "makepot-audit": [
-      "wp --allow-root i18n make-pot ./dist languages/zionbuilder.pot --exclude=\".github,vendor,node-modules,includes,.wordpress-org,bin,sample-data,node_modules,tests\" --slug=zionbuilder"
+      "wp --allow-root i18n make-pot ./ languages/zionbuilder.pot --exclude=\".github,vendor,node-modules,bin,node_modules,tests\" --slug=zionbuilder"
     ],
     "makepot": [
       "@makepot-audit --skip-audit"
