--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "dealerdirect/phpcodesniffer-composer-installer": "v1.0.0",
     "phpstan/phpstan": "^1.9.14",
     "squizlabs/php_codesniffer": "^3.7.1",
-    "szepeviktor/phpstan-wordpress": "v1.1.6",
+    "szepeviktor/phpstan-wordpress": "^1.1",
     "wp-coding-standards/wpcs": "2.3.0",
     "wp-cli/i18n-command": "^v2.4.1"
   },
