--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "version": "2.4.1",
   "private": true,
   "scripts": {
-    "translate": "composer run-script makepot",
+    "translate": "composer update && composer run-script makepot",
     "dev": "node ./bin/dev.mjs",
     "build": "node ./bin/build.mjs",
-    "zip": "node ./bin/build.mjs && composer run-script makepot && composer dump-autoload --no-dev --optimize && node ./bin/zip.mjs",
+    "zip": "node ./bin/build.mjs && pnpm run translate && composer dump-autoload --no-dev --optimize && node ./bin/zip.mjs",
     "publish": "yarn run publish:packages",
     "build:types": "tsc --build",
     "postinstall": "composer install",
