--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
       "wp --allow-root i18n make-pot . languages/zionbuilder.pot --exclude=\".github,vendor,node-modules,bin,node_modules,tests\" --slug=zionbuilder"
     ],
     "makepot": [
-      "@makepot-audit --skip-audit"
+      "wp --allow-root i18n make-pot . languages/zionbuilder.pot --exclude=\".github,vendor,node-modules,bin,node_modules,tests\" --slug=zionbuilder"
     ]
   }
 }
